# Travel-Diary-Surveys

./: .gitignore  TNC Trip Characteristics 012220.R  TNC Trip Characteristics 022820.R  TNC Trip Characteristics.R  review_notes_df.md
BATS 2023/: Explore_2023_draft_dataset.Rmd  Working_with_OSM_Data_and_Travel_Diary_Survey_Data.R
BATS-2023/: BATS-2023-SurveyDataViz.twb  BATS-2023-SurveyDataViz_5DayComplete.twb  BATS-2023-SurveyDataViz_5DayComplete_SFCTAflags.twb  BATS-2023-SurveyDataViz_FirstDayStartTime.twb  BATS-2023-SurveyDataViz_PreCovidModeAnalysis.twb  Completeness_checks.ipynb  (+15 more)
BATS-2023/BATS2023_exploration/purpose_investigation/: .gitignore  README.md  investigation.qmd  linker.py  main.py  pyproject.toml
SurveyModelTool/Tools/: README.md  pyproject.toml  setup.py
SurveyModelTool/Tools/survey_model_tool/: __init__.py  geo_crosswalker.py  mode_choice_estimator.py  model_reader.py  plotter.py  summarizers.py  survey_reader.py  utilities.py
SurveyModelTool/Tools/survey_model_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SurveyModelTool/Tools/survey_model_tool/dashboard/: __init__.py  plotter.py
SurveyModelTool/Tools/survey_model_tool/io/: __init__.py  model_reader.py  survey_reader.py
SurveyModelTool/Tools/survey_model_tool/model_estimation/: __init__.py  mode_choice_estimator.py
SurveyModelTool/Tools/survey_model_tool/sections/: __init__.py  day_pattern.py  mode_share.py  summary.py  telework.py  trip_tod.py
SurveyModelTool/Tools/survey_model_tool/services/: __init__.py  geo_crosswalker.py  summarizers.py  utilities.py
(+164 files in other folders)
