[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "survey-model-tool"
version = "0.1.0"
description = "A tool to read and summarize survey and model data."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3.0"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^21.7b0"
flake8 = "^3.9.2"