[project]
name = "purpose-investigation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "pandera[polars]>=0.26.1",
    "plotly>=6.3.1",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 80
select = ["ALL"]
